# memkit

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: ADOPTION_GUIDE.md  CONTAINER_GUIDE.md  CXX_API_REFERENCE.md  C_API_REFERENCE.md  DESIGN_PHILOSOPHY.md  GETTING_STARTED.md
include/: memkit.h  memkit_config.h  memkit_object_sizes.h
include/memkit/: stl.hpp
include/memkit/c_api/: callback_bridge.hpp  element_callback_bridge.hpp  object_lifecycle.hpp  static_checks.hpp
include/memkit/memory/: arena.hpp  mmap.hpp
src/: arena.cpp  mmap_backing.cpp
src/c_api/: bindings.cpp
src/c_api/bindings/: bitset.inc.cpp  btree.inc.cpp  deque.inc.cpp  dlist.inc.cpp  handle_pool.inc.cpp  hashmap.inc.cpp  list.inc.cpp  lrucache.inc.cpp  objpool.inc.cpp  pqueue.inc.cpp  queue.inc.cpp  ring.inc.cpp  stack.inc.cpp  vector.inc.cpp
tests/: test_arena_cpp.cpp  test_c_api_extended.c
